bug fixed => message not showing after editing normal and elective subjects, fixes #1164
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1238 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/public/stylesheets/exams/update.css
+++ b/public/stylesheets/exams/update.css
@@ -28,7 +28,7 @@
 
 .submit_button {
     margin-top:10px;
-    margin-left: 180px;
+    margin-left: 260px;
     padding: 7px 10px;
     color: #fff;
     background: #27292B;
@@ -42,4 +42,15 @@
 }
 .submit_button:hover{
     background:  #373B3F;
+}
+div.fieldWithErrors{
+    display: inline;
+}
+form.edit_exam{
+    margin: 0 auto;
+    width: 500px;
+}
+.necessary-field {
+    color: red;
+    font-size: 1.1em;
 }
