--- a/public/stylesheets/rtl/exams/create.css
+++ b/public/stylesheets/rtl/exams/create.css
@@ -26,7 +26,7 @@
 
 .submit_button {
     margin-top:20px;
-    margin-right:180px;
+    margin-right:260px;
     padding: 7px 10px;
     color: #fff;
     background: #27292B;
@@ -44,4 +44,12 @@
 
 div.fieldWithErrors{
     display: inline;
+}
+form.new_exam{
+    margin: 0 auto;
+    width: 500px;
+}
+.necessary-field {
+    color: red;
+    font-size: 1.1em;
 }
