--- a/public/stylesheets/rtl/exams/edit.css
+++ b/public/stylesheets/rtl/exams/edit.css
@@ -28,7 +28,7 @@
 
 .submit_button {
     margin-top:10px;
-    margin-right: 180px;
+    margin-right: 260px;
     padding: 7px 10px;
     color: #fff;
     background: #27292B;
@@ -42,4 +42,12 @@
 }
 .submit_button:hover{
     background:  #373B3F;
+}
+form.edit_exam{
+    margin: 0 auto;
+    width: 500px;
+}
+.necessary-field {
+    color: red;
+    font-size: 1.1em;
 }
