--- a/public/stylesheets/rtl/exams/new.css
+++ b/public/stylesheets/rtl/exams/new.css
@@ -26,7 +26,7 @@
 
 .submit_button {
     margin-top:20px;
-    margin-right:211px;
+    margin-right:260px;
     padding: 7px 10px;
     color: #fff;
     background: #27292B;
@@ -40,4 +40,12 @@
 }
 .submit_button:hover{
     background:  #373B3F;
+}
+form.new_exam{
+    margin: 0 auto;
+    width: 500px;
+}
+.necessary-field {
+    color: red;
+    font-size: 1.1em;
 }
